--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "private": true,
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://Gyane-git.github.io/Portfolio",
+  "homepage": "https://gyane-git.github.io/Portfolio/",
   "scripts": {
     "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test"
@@ -20,7 +20,6 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.10.2",
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
