--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-  "private": true,
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://gyane-git.github.io/Portfolio/",
-  "scripts": {
-    "build": "react-scripts --openssl-legacy-provider build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject",
-    "start": "react-scripts --openssl-legacy-provider start",
-    "test": "react-scripts test"
-  },
+  "private": true,
+  "homepage": "https://Gyane-git.github.io/Portfolio",
   "dependencies": {
-    "apollo-boost": "^0.4.4",
-    "baseui": "^9.65.3",
-    "chart.js": "^2.9.3",
-    "node-fetch": "^2.6.0",
-    "prettier-package-json": "^2.1.3",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-chartjs-2": "^2.9.0",
+    "baseui": "^10.0.0",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^3.9.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-is": "^17.0.2",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "styled-components": "^5.1.1",
-    "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.0",
+    "styletron-engine-atomic": "^1.4.8",
+    "styletron-react": "^6.0.1"
   },
-  "devDependencies": {
-    "dotenv": "^6.2.0",
-    "gh-pages": "^6.3.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "prettier": "2.0.5"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -47,16 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.json": "prettier-package-json --write",
-    "*.{js,css,md}": "prettier --write"
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
